<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menuHome"
            android:icon="@drawable/ic_home"
            android:title="@string/menuHomeTitle" />
        <item
            android:id="@+id/menuCategory"
            android:icon="@drawable/ic_list"
            android:title="@string/menuCategoryTitle" />
    </group>
    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menuBasket"
            android:icon="@drawable/ic_basket"
            android:title="@string/menuBasketTitle" />
    </group>
    <group
        android:id="@+id/group3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menuMostSell"
            android:icon="@drawable/ic_star"
            android:title="@string/menuStar1Title" />
        <item
            android:id="@+id/menuOffer"
            android:icon="@drawable/ic_star"
            android:title="@string/menuStar2Title" />
        <item
            android:id="@+id/menuMostView"
            android:icon="@drawable/ic_star"
            android:title="@string/menuStar3Title" />
        <item
            android:id="@+id/menuNews"
            android:icon="@drawable/ic_star"
            android:title="@string/menuStar4Title" />
    </group>
    <group
        android:id="@+id/group4"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menuSetting"
            android:icon="@drawable/ic_settings"
            android:title="@string/menuSettingTitle" />
        <item
            android:id="@+id/menuQuestion"
            android:icon="@drawable/ic_question"
            android:title="@string/menuQuestionTitle" />
        <item
            android:id="@+id/menuAboutUs"
            android:icon="@drawable/ic_dk"
            android:title="@string/menuInfoTitle" />
    </group>

</menu>