<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingLeft="20dp"
        android:layoutDirection="rtl"
        android:orientation="vertical"
        android:paddingRight="20dp">

        <RadioButton
            android:id="@+id/mostViewRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:buttonTint="@color/greenLight"
            android:fontFamily="@font/iransans"
            android:text="@string/sortFirstTypeTitle"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="normal" />

        <RadioButton
            android:id="@+id/mostSellRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:buttonTint="@color/greenLight"
            android:fontFamily="@font/iransans"
            android:text="@string/sortSecondTypeTitle"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="normal" />

        <RadioButton
            android:id="@+id/maxPriceRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:buttonTint="@color/greenLight"
            android:fontFamily="@font/iransans"
            android:text="@string/sortThirdTypeTitle"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="normal" />

        <RadioButton
            android:id="@+id/minPriceRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:buttonTint="@color/greenLight"
            android:fontFamily="@font/iransans"
            android:text="@string/sortFourthTypeTitle"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="normal" />

        <RadioButton
            android:id="@+id/newsRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:buttonTint="@color/greenLight"
            android:fontFamily="@font/iransans"
            android:text="@string/sortFifthTypeTitle"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="normal" />

    </RadioGroup>

</LinearLayout>